--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,13 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@fortawesome/angular-fontawesome": "^0.11.1",
+    "bootstrap": "^4.6.1",
+    "jquery": "^3.3.1",
+    "material-icons": "^1.11.4",
+    "popper.js": "^1.14.3",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.4.20",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
