--- a/chatback/pom.xml
+++ b/chatback/pom.xml
@@ -8,23 +8,15 @@
 		<version>2.7.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
-	<artifactId>lab_11_back</artifactId>
+	<groupId>web.trabalho</groupId>
+	<artifactId>chatback</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>lab_11_back</name>
+	<name>chatback</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
-		<dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
